# YANES

./: CMakeLists.txt  go.mod
include/: nes.h
src/: cpu.cpp
src/nes/: cpu.go  cpu_test.go
tests/: CMakeLists.txt  cpu_test.cpp
